--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
                 <h2>Paper Publications</h2>
                 <div class="grid-container">
                     <article class="paper">
-                        <img src="paper1.png" alt="Paper Icon">
+                        <img src="Images/paper1.png" alt="Paper Icon">
                         <a href="https://einsteinpapers.press.princeton.edu/vol3-doc/" target="_blank">View More</a>
                     </article>
                     <article class="paper">
-                        <img src="paper2.png" alt="Paper Icon">
+                        <img src="Images/paper2.png" alt="Paper Icon">
                         <a href="https://einsteinpapers.press.princeton.edu/vol3-trans/" target="_blank">View More</a>
                     </article>
                     <article class="paper">
-                        <img src="paper3.png" alt="Paper Icon">
+                        <img src="Images/paper3.png" alt="Paper Icon">
                         <a href="https://einsteinpapers.press.princeton.edu/vol4-doc/" target="_blank">View More</a>
                     </article>
                     <article class="paper">
-                        <img src="paper4.png" alt="Paper Icon">
+                        <img src="Images/paper4.png" alt="Paper Icon">
                         <a href="https://einsteinpapers.press.princeton.edu/vol4-trans/" target="_blank">View More</a>
                     </article>
                 </div>            
@@ -59,29 +59,29 @@
             <section id="hobbies">
                 <h2>Hobbies</h2>
                 <div class="image-grid">
-                    <img src="img1.jpg" alt="Hobby 1">
-                    <img src="img2.jpg" alt="Hobby 2">
-                    <img src="img3.jpg" alt="Hobby 3">
-                    <img src="img4.jpg" alt="Hobby 4">
+                    <img src="Images/img1.jpg" alt="Hobby 1">
+                    <img src="Images/img2.jpg" alt="Hobby 2">
+                    <img src="Images/img3.jpg" alt="Hobby 3">
+                    <img src="Images/img4.jpg" alt="Hobby 4">
                 </div>
             </section>
             <section id="blogs">
                 <h2>Blogs</h2>
                 <div class="image-grid">
                     <div class="blog-item">
-                        <img src="Blogs.jpg" alt="Blog 1">
+                        <img src="Images/Blogs.jpg" alt="Blog 1">
                         <p>Time Dilation: A Fascinating Concept</p>
                     </div>
                     <div class="blog-item">
-                        <img src="Blogs.jpg" alt="Blog 2">
+                        <img src="Images/Blogs.jpg" alt="Blog 2">
                         <p>The Theory of Relativity Explained</p>
                     </div>
                     <div class="blog-item">
-                        <img src="Blogs.jpg" alt="Blog 3">
+                        <img src="Images/Blogs.jpg" alt="Blog 3">
                         <p>Quantum Mechanics and Einstein’s Views</p>
                     </div>
                     <div class="blog-item">
-                        <img src="Blogs.jpg" alt="Blog 4">
+                        <img src="Images/Blogs.jpg" alt="Blog 4">
                         <p>Einstein's Impact on Modern Physics</p>
                     </div>
                 </div>
@@ -89,10 +89,10 @@
         </main>
         <footer>
             <div id="contact" class="social-icons">
-                <a href="https://www.LinkedIn.com/" target="_blank"><img src="LinkedIn.png" alt="LinkedIn"></a>
-                <a href="https://www.Github.com/" target="_blank"><img src="Github.png" alt="Github"></a>
-                <a href="https://www.facebook.com/albert.einstein.fans" target="_blank"><img src="Facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/alberteinstein?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="Instagram.png" alt="Instagram"></a> 
+                <a href="https://www.LinkedIn.com/" target="_blank"><img src="Images/LinkedIn.png" alt="LinkedIn"></a>
+                <a href="https://www.Github.com/" target="_blank"><img src="Images/Github.png" alt="Github"></a>
+                <a href="https://www.facebook.com/albert.einstein.fans" target="_blank"><img src="Images/Facebook.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/alberteinstein?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="Images/Instagram.png" alt="Instagram"></a> 
             </div>
         </footer>
     </div>
