--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <header class="header-grid">
-            <img src="Albert Einstein.jpg" alt="Albert Einstein" class="profile-image">
+            <img src="Images/Albert Einstein.jpg" alt="Albert Einstein" class="profile-image">
             <div class="about-section">
                 <h1>Albert Einstein</h1>
                 <h2>Theoretical physicist</h2>
